# confab-web

./: .dockerignore  .env.example  .env.local.example  .gitignore  .kata.toml  BACKEND_PLAN.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Caddyfile  Dockerfile  FLY_DEPLOYMENT.md  LICENSE  Makefile  NOTES.md  README.md  SELF-HOSTING.md  TASK-api-key-getorcreate.md  TASK-latest-version-endpoint.md  deploy-to-fly.sh  docker-compose.infra.yml  docker-compose.yml  docker-run-local.sh  fly-secrets-template.sh  fly.toml  fly_logs_sample.jsonl  go.mod  incremental_sync_api.md  install.sh  main.go  migrate_db.sh  plan.md  set_neon_quotas.sh  test-pr-workflow-dummy.txt
.lean-forge/: findings.md  ideas.md  iteration-log.md  prepare.py  prepare.py.sha256  results.tsv  targets.md
backend/: .env.example  .gitignore  API.md  CLAUDE.md  CONTENT_TYPE_VALIDATION.md  COOKIE_SECURITY.md  CORS_CONFIGURATION.md  CSRF_PROTECTION.md  DB_MIGRATION_STRATEGY.md  EMAIL_WHITELIST.md  INPUT_VALIDATION.md  Makefile  OPEN_REDIRECT_FIX.md  PERFORMANCE.md  RATE_LIMITING.md  README.md  RESPONSE_COMPRESSION.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_CF425.md  SECURITY_HEADERS.md  TEST.md  TODO.md  docker-compose.yml  (+3 more)
e2e/: Makefile  debug_test.sh  debug_with_daemon.sh  docker-compose.yml  pyproject.toml
e2e/containers/backend/: Dockerfile
e2e/containers/workstation/: Dockerfile
e2e/containers/workstation/scripts/: entrypoint.sh  setup.sh  test_and_log.sh
e2e/tests/: conftest.py  test_basic_sync.py  test_incremental_sync.py  test_session_metadata.py  test_transcript_verification.py
(+1482 files in other folders)
